--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -1003,6 +1003,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Deliverables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
