--- a/Notebooks/Agatha.ipynb
+++ b/Notebooks/Agatha.ipynb
@@ -66,6 +66,8 @@
     "\n",
     "***Temporal Bias:*** The data spans from 1999 to 2008, and healthcare practices may have evolved since then, potentially limiting the model's applicability to current clinical settings.\n",
     "\n",
+    "***Feature Relevance:*** Some features such as \"race\" may not be relevant for predicting readmission, and including them could introduce noise into the model.\n",
+    "\n",
     "Predictive models may not capture all the complex factors influencing readmission like lifestyle, follow up and post discharge care and unforseen medical events.\n"
    ]
   },
