--- a/Notebooks/Kitasi.ipynb
+++ b/Notebooks/Kitasi.ipynb
@@ -142,12 +142,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Inspection"
+    "-----------------------------------------------------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Data loading and inspection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +378,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,14 +386,14 @@
    "source": [
     "#load dataset for preview.\n",
     "\n",
-    "diabetes_df = pd.read_csv(\"../diabetic_data.csv\")\n",
+    "df = pd.read_csv(\"../diabetic_data.csv\")\n",
     "\n",
-    "diabetes_df.head()"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -399,14 +406,48 @@
    ],
    "source": [
     "#dertmine the shape of the dataset.\n",
-    "rows, columns = diabetes_df.shape\n",
+    "rows, columns = df.shape\n",
     "\n",
     "print(f'The dataset has {rows} rows and {columns} columns')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['encounter_id', 'patient_nbr', 'race', 'gender', 'age', 'weight',\n",
+       "       'admission_type_id', 'discharge_disposition_id', 'admission_source_id',\n",
+       "       'time_in_hospital', 'payer_code', 'medical_specialty',\n",
+       "       'num_lab_procedures', 'num_procedures', 'num_medications',\n",
+       "       'number_outpatient', 'number_emergency', 'number_inpatient', 'diag_1',\n",
+       "       'diag_2', 'diag_3', 'number_diagnoses', 'max_glu_serum', 'A1Cresult',\n",
+       "       'metformin', 'repaglinide', 'nateglinide', 'chlorpropamide',\n",
+       "       'glimepiride', 'acetohexamide', 'glipizide', 'glyburide', 'tolbutamide',\n",
+       "       'pioglitazone', 'rosiglitazone', 'acarbose', 'miglitol', 'troglitazone',\n",
+       "       'tolazamide', 'examide', 'citoglipton', 'insulin',\n",
+       "       'glyburide-metformin', 'glipizide-metformin',\n",
+       "       'glimepiride-pioglitazone', 'metformin-rosiglitazone',\n",
+       "       'metformin-pioglitazone', 'change', 'diabetesMed', 'readmitted'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Displaying the names of the  columns\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -475,12 +516,12 @@
    ],
    "source": [
     "#structural summary of the dataset.\n",
-    "diabetes_df.info()"
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -694,21 +735,293 @@
        "max           76.000000         21.000000         16.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#statistical summary of the dataset.\n",
-    "diabetes_df.describe()"
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "readmitted\n",
+       "NO     54864\n",
+       ">30    35545\n",
+       "<30    11357\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#checking the distribution ofthe target variable.\n",
+    "df['readmitted'].value_counts()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Observations drawn from data inspection\n"
+    "### Observations drawn from data inspection\n",
+    "\n",
+    "\n",
+    "-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Data cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.1 Checking and handling columns with missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['encounter_id', 'patient_nbr', 'race', 'gender', 'age', 'weight',\n",
+       "       'admission_type_id', 'discharge_disposition_id', 'admission_source_id',\n",
+       "       'time_in_hospital', 'payer_code', 'medical_specialty',\n",
+       "       'num_lab_procedures', 'num_procedures', 'num_medications',\n",
+       "       'number_outpatient', 'number_emergency', 'number_inpatient', 'diag_1',\n",
+       "       'diag_2', 'diag_3', 'number_diagnoses', 'max_glu_serum', 'A1Cresult',\n",
+       "       'metformin', 'repaglinide', 'nateglinide', 'chlorpropamide',\n",
+       "       'glimepiride', 'acetohexamide', 'glipizide', 'glyburide', 'tolbutamide',\n",
+       "       'pioglitazone', 'rosiglitazone', 'acarbose', 'miglitol', 'troglitazone',\n",
+       "       'tolazamide', 'examide', 'citoglipton', 'insulin',\n",
+       "       'glyburide-metformin', 'glipizide-metformin',\n",
+       "       'glimepiride-pioglitazone', 'metformin-rosiglitazone',\n",
+       "       'metformin-pioglitazone', 'change', 'diabetesMed', 'readmitted'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_glu_serum    96420\n",
+      "A1Cresult        84748\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checking for missing values\n",
+    "\n",
+    "missing_values = df.isnull().sum()\n",
+    "\n",
+    "#printing missing values\n",
+    "\n",
+    "print(missing_values[missing_values>0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creating a function to check the distribution of columns with missing values\n",
+    "\n",
+    "def print_value_counts(df, column):\n",
+    "    if column in df.columns:\n",
+    "        print(df[column].value_counts(dropna=False))  #includes NaN values\n",
+    "    else:\n",
+    "        print(f'colum {column} is not found in the DataFrame')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_glu_serum\n",
+      "NaN     96420\n",
+      "Norm     2597\n",
+      ">200     1485\n",
+      ">300     1264\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_value_counts(df, \"max_glu_serum\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A1Cresult\n",
+      "NaN     84748\n",
+      ">8       8216\n",
+      "Norm     4990\n",
+      ">7       3812\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_value_counts(df, \"A1Cresult\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Since the two colums displayed above have alot of missing values compared to the other values in those colums, \n",
+    "# we will proceed and remove this columns to reduce the complexity of the dataset.\n",
+    "\n",
+    "df.drop(['A1Cresult','max_glu_serum'],axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 Checking and handling duplicate columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creatinga func to check id the  dataset has duplicate columns\n",
+    "def find_duplicate_columns(df):\n",
+    "    \n",
+    "    duplicate_columns = {}\n",
+    "    columns = df.columns\n",
+    "\n",
+    "    for i in range(len(columns)):\n",
+    "        for j in range(i + 1, len(columns)):  # Compare each column with the rest\n",
+    "            if df[columns[i]].equals(df[columns[j]]):  # Check if two columns are identical\n",
+    "                duplicate_columns[columns[j]] = columns[i]  # Store duplicate mapping\n",
+    "\n",
+    "    return duplicate_columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate columns found:\n",
+      "'citoglipton' is a duplicate of 'examide'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# printing the duplicate column names\n",
+    "duplicates = find_duplicate_columns(df)\n",
+    "if duplicates:\n",
+    "    print(\"Duplicate columns found:\")\n",
+    "    for duplicate, original in duplicates.items():\n",
+    "        print(f\"'{duplicate}' is a duplicate of '{original}'\")\n",
+    "else:\n",
+    "    print(\"No duplicate columns found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dropping the duplicated columns to improve clarity and usability.\n",
+    "\n",
+    "df.drop(['citoglipton'],axis=1, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No duplicate columns found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# rerunning the code to ensure that the duplicated column has been removed from the dataset.\n",
+    "duplicates = find_duplicate_columns(df)\n",
+    "if duplicates:\n",
+    "    print(\"Duplicate columns found:\")\n",
+    "    for duplicate, original in duplicates.items():\n",
+    "        print(f\"'{duplicate}' is a duplicate of '{original}'\")\n",
+    "else:\n",
+    "    print(\"No duplicate columns found.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Data Preprocessing."
    ]
   }
  ],
