--- a/Notebooks/JohnMbego.ipynb
+++ b/Notebooks/JohnMbego.ipynb
@@ -686,6 +686,34 @@
     "df1.duplicated().sum() #to know the dup count\n",
     "df1.drop_duplicates(inplace=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color:#32CD32\">***Data Preprocessing***</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert Categorical columns to proper format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1[]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
