--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "       dtype='object'))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,16 +150,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101766"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +182,7 @@
        "Name: readmitted, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +523,7 @@
        "number_diagnoses                  0.055539          0.104710          1.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +935,7 @@
        "readmitted                        0.104820    1.000000  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,19 +946,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NO     54864\n",
-       ">30    35545\n",
-       "<30    11357\n",
+       "0    54864\n",
+       "1    35545\n",
+       "2    11357\n",
        "Name: readmitted, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,26 +969,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "32495      NO\n",
-       "40605     >30\n",
-       "94223      NO\n",
-       "29011      NO\n",
-       "50796      NO\n",
-       "67079      NO\n",
-       "75856      NO\n",
-       "75136      NO\n",
-       "89792      NO\n",
-       "100210     NO\n",
-       "Name: readmitted, dtype: object"
+       "25936    1\n",
+       "73172    1\n",
+       "26802    0\n",
+       "22252    0\n",
+       "7346     1\n",
+       "10592    0\n",
+       "26355    0\n",
+       "62511    0\n",
+       "38928    0\n",
+       "41242    1\n",
+       "Name: readmitted, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1104,189 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 2. Data Preparation\n",
+    "In order to model our data, we first need to prepare it.The first step is to inspect our data set to get a good grasp of the information it contains before we proceed to modeling. \n",
+    "\n",
+    "### Data Inspection\n",
+    "\n",
+    "- From the [link](https://archive.ics.uci.edu/dataset/296/diabetes+130-us+hospitals+for+years+1999-20)\n",
+    "\n",
+    "Below is the description of the columns in the dataset\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "path =  \"../diabetic_data.csv\"\n",
+    "df = pd.read_csv(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 101766 entries, 0 to 101765\n",
+      "Data columns (total 50 columns):\n",
+      " #   Column                    Non-Null Count   Dtype \n",
+      "---  ------                    --------------   ----- \n",
+      " 0   encounter_id              101766 non-null  int64 \n",
+      " 1   patient_nbr               101766 non-null  int64 \n",
+      " 2   race                      101766 non-null  object\n",
+      " 3   gender                    101766 non-null  object\n",
+      " 4   age                       101766 non-null  object\n",
+      " 5   weight                    101766 non-null  object\n",
+      " 6   admission_type_id         101766 non-null  int64 \n",
+      " 7   discharge_disposition_id  101766 non-null  int64 \n",
+      " 8   admission_source_id       101766 non-null  int64 \n",
+      " 9   time_in_hospital          101766 non-null  int64 \n",
+      " 10  payer_code                101766 non-null  object\n",
+      " 11  medical_specialty         101766 non-null  object\n",
+      " 12  num_lab_procedures        101766 non-null  int64 \n",
+      " 13  num_procedures            101766 non-null  int64 \n",
+      " 14  num_medications           101766 non-null  int64 \n",
+      " 15  number_outpatient         101766 non-null  int64 \n",
+      " 16  number_emergency          101766 non-null  int64 \n",
+      " 17  number_inpatient          101766 non-null  int64 \n",
+      " 18  diag_1                    101766 non-null  object\n",
+      " 19  diag_2                    101766 non-null  object\n",
+      " 20  diag_3                    101766 non-null  object\n",
+      " 21  number_diagnoses          101766 non-null  int64 \n",
+      " 22  max_glu_serum             101766 non-null  object\n",
+      " 23  A1Cresult                 101766 non-null  object\n",
+      " 24  metformin                 101766 non-null  object\n",
+      " 25  repaglinide               101766 non-null  object\n",
+      " 26  nateglinide               101766 non-null  object\n",
+      " 27  chlorpropamide            101766 non-null  object\n",
+      " 28  glimepiride               101766 non-null  object\n",
+      " 29  acetohexamide             101766 non-null  object\n",
+      " 30  glipizide                 101766 non-null  object\n",
+      " 31  glyburide                 101766 non-null  object\n",
+      " 32  tolbutamide               101766 non-null  object\n",
+      " 33  pioglitazone              101766 non-null  object\n",
+      " 34  rosiglitazone             101766 non-null  object\n",
+      " 35  acarbose                  101766 non-null  object\n",
+      " 36  miglitol                  101766 non-null  object\n",
+      " 37  troglitazone              101766 non-null  object\n",
+      " 38  tolazamide                101766 non-null  object\n",
+      " 39  examide                   101766 non-null  object\n",
+      " 40  citoglipton               101766 non-null  object\n",
+      " 41  insulin                   101766 non-null  object\n",
+      " 42  glyburide-metformin       101766 non-null  object\n",
+      " 43  glipizide-metformin       101766 non-null  object\n",
+      " 44  glimepiride-pioglitazone  101766 non-null  object\n",
+      " 45  metformin-rosiglitazone   101766 non-null  object\n",
+      " 46  metformin-pioglitazone    101766 non-null  object\n",
+      " 47  change                    101766 non-null  object\n",
+      " 48  diabetesMed               101766 non-null  object\n",
+      " 49  readmitted                101766 non-null  object\n",
+      "dtypes: int64(13), object(37)\n",
+      "memory usage: 38.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The data contains various info on patients as well as the status of readmission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dataset contains 101766 rows and 50 columns\n"
+     ]
+    }
+   ],
+   "source": [
+    "shape = df.shape\n",
+    "print(f\"The dataset contains {shape[0]} rows and {shape[1]} columns\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Description\n",
+    "\n",
+    "From the link, below is a description of the data set columns\n",
+    "\n",
+    "This dataset provides information on patient encounters, medications, and outcomes, including readmission status. Below is a detailed description of the key variables:\n",
+    "\n",
+    "| **Variable Name**         | **Description**                                                                 |\n",
+    "|----------------------------|---------------------------------------------------------------------------------|\n",
+    "| encounter_id               | Unique identifier of an encounter                                               |\n",
+    "| patient_nbr                | Unique identifier of a patient                                                  |\n",
+    "| race                       | Values: Caucasian, Asian, African American, Hispanic, and other                 |\n",
+    "| gender                     | Values: male, female, and unknown/invalid                                       |\n",
+    "| age                        | Grouped in 10-year intervals: [0, 10), ..., [90, 100)                           |\n",
+    "| weight                     | Weight in pounds                                                                 |\n",
+    "| admission_type_id          | Integer identifier for values like emergency, urgent, elective                  |\n",
+    "| discharge_disposition_id   | Integer for outcomes like discharged home, expired, etc.                        |\n",
+    "| admission_source_id        | Integer for values like physician referral, emergency room                      |\n",
+    "| time_in_hospital           | Number of days between admission and discharge                                  |\n",
+    "| diag_3                     | Additional diagnosis coded by ICD-9 (954 distinct values)                       |\n",
+    "| number_diagnoses           | Number of diagnoses entered                                                      |\n",
+    "| max_glu_serum              | Serum glucose test result range: >200, >300, normal, none                       |\n",
+    "| A1Cresult                  | Test result categories: >8, >7, normal, none                                    |\n",
+    "| metformin                  | Drug prescription change: up, down, steady, or no                               |\n",
+    "| repaglinide                | Same as above                                                                    |\n",
+    "| nateglinide                | Same as above                                                                    |\n",
+    "| chlorpropamide             | Same as above                                                                    |\n",
+    "| glimepiride                | Same as above                                                                    |\n",
+    "| acetohexamide              | Same as above                                                                    |\n",
+    "| glipizide                  | Same as above                                                                    |\n",
+    "| glyburide                  | Same as above                                                                    |\n",
+    "| tolbutamide                | Same as above                                                                    |\n",
+    "| pioglitazone               | Same as above                                                                    |\n",
+    "| rosiglitazone              | Same as above                                                                    |\n",
+    "| acarbose                   | Same as above                                                                    |\n",
+    "| miglitol                   | Same as above                                                                    |\n",
+    "| troglitazone               | Same as above                                                                    |\n",
+    "| tolazamide                 | Same as above                                                                    |\n",
+    "| examide                    | Same as above                                                                    |\n",
+    "| citoglipton                | Same as above                                                                    |\n",
+    "| insulin                    | Same as above                                                                    |\n",
+    "| glyburide-metformin        | Same as above                                                                    |\n",
+    "| glipizide-metformin        | Same as above                                                                    |\n",
+    "| glimepiride-pioglitazone   | Same as above                                                                    |\n",
+    "| metformin-rosiglitazone    | Same as above                                                                    |\n",
+    "| metformin-pioglitazone     | Same as above                                                                    |\n",
+    "| change                     | Indicates medication change: change or no change                                |\n",
+    "| diabetesMed                | Indicates if diabetic medication was prescribed                                 |\n",
+    "| readmitted                 | Readmission: <30 days, >30 days, or no readmission                               |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##"
+   ]
   }
  ],
  "metadata": {
